Subiendo los primeros cambios para la base datos postgress

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=app.db;Cache=Shared",
+    "PostgreSQLConnection":"Host=dpg-co417pq1hbls73bnvej0-a.oregon-postgres.render.com;Database=bdmovies_db;Username=bdmovies_db_user;Password=PQeogZcoJ0EBA2R9QWiBxK3FEQZoKqSp;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
