--- a/movieappauth.csproj
+++ b/movieappauth.csproj
@@ -18,6 +18,11 @@
     <!--PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.3" /-->
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+
+
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+
   </ItemGroup>
 
 </Project>
