--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "PostgreSQLConnection":"Host=dpg-co417pq1hbls73bnvej0-a.oregon-postgres.render.com;Database=bdmovies_db;Username=bdmovies_db_user;Password=PQeogZcoJ0EBA2R9QWiBxK3FEQZoKqSp;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+    "PostgreSQLConnection":"Host=dpg-com6v2mn7f5s73d5qmng-a.oregon-postgres.render.com;Database=movieappdb_3mtp;Username=movieappdb_3mtp_user;Password=qDTZze03LkwkK29DhwvF33YLzYiAdLr7;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+    
   },
   "Logging": {
     "LogLevel": {
