--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "DataSource=app.db;Cache=Shared",
-    "PostgreSQLConnection":"Host=dpg-co417pq1hbls73bnvej0-a.oregon-postgres.render.com;Database=bdmovies_db;Username=bdmovies_db_user;Password=PQeogZcoJ0EBA2R9QWiBxK3FEQZoKqSp;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+    "PostgreSQLConnection":"Host=dpg-comcocen7f5s73d8eldg-a.oregon-postgres.render.com;Database=dbmovie_c4yp;Username=dbmovie_db_user;Password=RIqLTWHnKCPqXU0aKEBZcP04ytuAjL5r;Port=5432;SSL Mode=Require;Trust Server Certificate=true"
+
   },
   "Logging": {
     "LogLevel": {
@@ -11,3 +12,4 @@
   },
   "AllowedHosts": "*"
 }
+
